--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,15 +2,15 @@ name: Go
 
 on:
   push:
-    branches: [ master,release-*,v2 ]
+    branches: [ master,release-*,v2,feature/* ]
   pull_request:
-    branches: [ master,release-*,v2 ]
+    branches: [ master,release-*,v2,feature/* ]
 
 jobs:
   golangci:
     strategy:
       matrix:
-        go-version: [ '1.16','1.17','1.18','1.19','1.20' ]
+        go-version: [ '1.18','1.19','1.20','1.21' ]
     name: golangci-lint
     runs-on: ubuntu-latest
     steps:
@@ -42,11 +42,11 @@ jobs:
     # strategy set
     strategy:
       matrix:
-        go: [ '1.16','1.17','1.18','1.19','1.20' ]
+        go: [ '1.18','1.19','1.20','1.21' ]
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Go 1.x
+      - name: Set up Go ${{ matrix.go-version }}
         uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go }}
